# COMP371_Assignment_1

./: README.md
part1/: READ.md  function.h  function_implementation.cpp  main.cpp
part2/: CMakeLists.txt  READ.md  point.h
part2/include/: triangle.h
part2/src/: .main.cpp.swp  .triangle.cpp.swp  main.cpp  point.cpp  point.h  triangle.cpp
pt1_pt2_outputs/: outputs.aux  outputs.fdb_latexmk  outputs.fls  outputs.tex
